<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
    </properties>
    <parent>
        <groupId>no.priv.garshol.duke</groupId>
        <artifactId>duke</artifactId>
        <version>1.3-SNAPSHOT</version>
        <relativePath>../</relativePath>
    </parent>
    <artifactId>duke-core</artifactId>
    <packaging>jar</packaging>

    <dependencies>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-core</artifactId>
            <version>4.0.0</version>
        </dependency>

        <!-- necessary to get KeywordAnalyzer and StandardAnalyzer -->
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-analyzers-common</artifactId>
            <version>4.0.0</version>
        </dependency>

        <!-- necessary for spatial searches
             NOTE: the code is written so that Duke will work without it,
                   as long as you don't use spatial searches -->
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-spatial</artifactId>
            <version>4.0.0</version>
        </dependency>

        <!-- Spatial4j -->
        <dependency>
            <groupId>com.spatial4j</groupId>
            <artifactId>spatial4j</artifactId>
            <version>0.3</version> <!-- Update version if needed -->
        </dependency>

        <!-- Lucene Queries -->
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-queries</artifactId>
            <version>4.0.0</version> <!-- Update version if needed -->
        </dependency>

    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <!-- the next setting turns on variable substitution -->
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <!-- this plugin configures the manifest file -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Main-Class>no.priv.garshol.duke.Duke</Main-Class>
                            <Implementation-Title>Duke</Implementation-Title>
                            <Implementation-Version>${project.version}</Implementation-Version>
                            <Implementation-Build>${buildNumber}</Implementation-Build>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <!-- this plugin sets the build number in duke.properties -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>1.2</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doCheck>false</doCheck>
                    <doUpdate>false</doUpdate>
                    <format>{0,number} ({1,date,yyyy-MM-dd})</format>
                    <items>
                        <item>buildNumber0</item>
                        <item>timestamp</item>
                    </items>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>
